--- a/include/install
+++ b/include/install
@@ -5,4 +5,4 @@
 # 0.0.0.8
 
 # install/update
-cp /home/"$(whoami)"/pitrump/include* /usr/local/bin/ 2>&1
+cp /home/"$(whoami)"/trump-node/include* /usr/local/bin/ 2>&1
