--- a/include/install
+++ b/include/install
@@ -2,9 +2,10 @@
 
 # By Rainman
 # V20210912
-# 0.0.1.1
+# 0.0.1.2
 
 # install/update
+clear
 sudo cp -R /home/"$(whoami)"/trump-node/include/* /usr/local/bin/include/ 2>&1
 sudo cp -R /home/"$(whoami)"/trump-node/pitrump /usr/local/bin/ 2>&1
 echo "Updated!"
