--- a/include/install
+++ b/include/install
@@ -1,12 +1,14 @@
 #!/bin/bash
 
 # By Rainman
-# V20210912
-# 0.0.1.2
+# V20211312
+# 0.0.1.4
 
 # install/update
 clear
 sudo cp -R /home/"$(whoami)"/trump-node/include/* /usr/local/bin/include/ 2>&1
 sudo cp -R /home/"$(whoami)"/trump-node/pitrump /usr/local/bin/ 2>&1
+sudo cp -R /home/"$(whoami)"/trump-node/update /usr/local/bin/ 2>&1
+sudo chmod +x /usr/local/bin/update
 echo "Updated!"
 ls -lS /usr/local/bin/include/
