--- a/include/install
+++ b/include/install
@@ -2,7 +2,7 @@
 
 # By Rainman
 # V20211612
-# 0.0.1.9
+# 0.0.2.0
 
 source /home/pi/pitrump.conf
 
@@ -12,7 +12,8 @@ sudo cp -R /home/"$(whoami)"/trump-node/include/* /usr/local/bin/include/ 2>&1
 sudo cp -R /home/"$(whoami)"/trump-node/pitrump /usr/local/bin/ 2>&1
 sudo cp -R /home/"$(whoami)"/trump-node/include/update /usr/local/bin/ 2>&1
 sudo chmod +x /usr/local/bin/update
-sudo chown -R "$(whoami)":"$(whoami)" /usr/local/bin/pitrump /usr/local/bin/update "${LOG_DIR:?}"/node_data /usr/local/bin/include /usr/local/bin/include/* 2>&1
+sudo chown -R "$(whoami)":"$(whoami)" /usr/local/bin/pitrump /usr/local/bin/update /usr/local/bin/include /usr/local/bin/include/* 2>&1
+sudo chown "$(whoami)":"$(whoami)" "${LOG_DIR:?}"/node_data 2>&1
 echo "Updated!"
 ls -lS /usr/local/bin/include/
 
