--- a/include/install
+++ b/include/install
@@ -1,10 +1,22 @@
 #!/bin/bash
 
 # By Rainman
-# V20211612
-# 0.0.2.0
+# V20211712
+# 0.0.3.2
 
 source /home/pi/pitrump.conf
+
+# dependencies
+
+# make sure screen is installed
+if ! [ -x "$(command -v screen)" ]; then
+  sudo apt-get install screen -y
+fi
+# make sure tor is installed
+if ! [ -x "$(command -v tor)" ]; then
+  sudo apt-get install tor -y
+  echo "Setup tor/wallet configurations!"
+fi
 
 # install/update
 clear
