--- a/include/install
+++ b/include/install
@@ -2,7 +2,7 @@
 
 # By Rainman
 # V20212312
-# 0.0.5.1
+# 0.0.5.8
 
 source /home/pi/pitrump.conf
 source /usr/local/bin/include/color
@@ -18,34 +18,41 @@ if ! [ -x "$(command -v tor)" ] &>/dev/null; then
   sudo apt-get install tor -y
   echo "Setup tor/wallet configurations!"
 fi
-# update repo
-cd /home/"$(whoami)"/trump-node || exit
-# fetch date, time and head commit
-REPO_HEAD_OLD=$(git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2>&1)
-# save values, make it old next round
-echo "$REPO_HEAD_OLD" >"${LOG_DIR:?}"/node_data/repo/head.old 2>&1
-# install/update
-clear
-mkdir "${LOG_DIR:?}"/node_data &>/dev/null
-mkdir "${LOG_DIR:?}"/node_data/repo &>/dev/null
-sudo cp -R /home/"$(whoami)"/trump-node/include/* /usr/local/bin/include/ 2>&1
-sudo cp -R /home/"$(whoami)"/trump-node/pitrump /usr/local/bin/ 2>&1
-sudo cp -R /home/"$(whoami)"/trump-node/include/update /usr/local/bin/ 2>&1
-sudo chmod +x /usr/local/bin/update
-sudo chown -R "$(whoami)":"$(whoami)" /usr/local/bin/pitrump /usr/local/bin/update /usr/local/bin/include /usr/local/bin/include/* 2>&1
-sudo chown "$(whoami)":"$(whoami)" "${LOG_DIR:?}"/node_data 2>&1
-# update repo
-cd /home/"$(whoami)"/trump-node || exit
-# fetch date, time and head commit
-REPO_HEAD=$(git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2>&1)
-# if files above exist use
-if [[ -f "${LOG_DIR:?}"/node_data/repo/head ]] &>/dev/null; then
+function repo_head_old() {
   # fetch date, time and head commit
-  REPO_HEAD_OLD=$(cat "${LOG_DIR:?}"/node_data/repo/head 2>/dev/null)
+  REPO_HEAD_OLD=$(git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2>&1)
+  # save values, make it old next round
+  echo "$REPO_HEAD_OLD" >"${LOG_DIR:?}"/node_data/repo/head.old 2>&1
+}
+# update repo
+cd /home/"$(whoami)"/trump-node || exit
+if git checkout master &>/dev/null &&
+  git fetch origin master &>/dev/null &&
+  [ "$(git rev-list HEAD...origin/master --count)" != 0 ] &&
+  git merge origin/master; then
+  repo_head_old
+  # install/update
+  clear
+  mkdir "${LOG_DIR:?}"/node_data &>/dev/null
+  mkdir "${LOG_DIR:?}"/node_data/repo &>/dev/null
+  sudo cp -R /home/"$(whoami)"/trump-node/include/* /usr/local/bin/include/ 2>&1
+  sudo cp -R /home/"$(whoami)"/trump-node/pitrump /usr/local/bin/ 2>&1
+  sudo cp -R /home/"$(whoami)"/trump-node/include/update /usr/local/bin/ 2>&1
+  sudo chmod +x /usr/local/bin/update
+  sudo chown -R "$(whoami)":"$(whoami)" /usr/local/bin/pitrump /usr/local/bin/update /usr/local/bin/include /usr/local/bin/include/* 2>&1
+  sudo chown "$(whoami)":"$(whoami)" "${LOG_DIR:?}"/node_data 2>&1
+  # update repo
+  cd /home/"$(whoami)"/trump-node || exit
+  # fetch date, time and head commit
+  REPO_HEAD=$(git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2>&1)
+  printf '%b' "Upgrade! [${G1:?}Ok${N0:?}] [${G0:?}${REPO_HEAD_OLD:?}${N0:?}] -> [${P1:?}${REPO_HEAD:?}${N0:?}]${N0:?}\n"
+  ls -lS /usr/local/bin/include/
 else
-  REPO_HEAD_OLD="${GR:?}0000000${N0:?}"
+  repo_head_old
+  # fetch old date, time and head commit
+  REPO_HEAD_OLD=$(cat "${LOG_DIR:?}"/node_data/repo/head.old 2>/dev/null)
+  printf '%b' "Updated! [${G1:?}Ok${N0:?}] [${G0:?}${REPO_HEAD_OLD:?}${N0:?}] -> [${P1:?}${REPO_HEAD:?}${N0:?}]${N0:?}\n"
+  ls -lS /usr/local/bin/include/
 fi
-printf '%b' "Updated! [${G1:?}Ok${N0:?}] [${G0:?}${REPO_HEAD_OLD:?}${N0:?}] -> [${P1:?}${REPO_HEAD:?}${N0:?}]${N0:?}\n"
-ls -lS /usr/local/bin/include/
 
 # END
