--- a/include/install
+++ b/include/install
@@ -44,7 +44,7 @@ if git checkout master &>/dev/null &&
   # update repo
   cd /home/"$(whoami)"/trump-node || exit
   # fetch date, time and head commit
-  git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2>&1 >"${LOG_DIR:?}"/node_data/repo/head.new 2>&1
+  git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 >"${LOG_DIR:?}"/node_data/repo/head.new 2>&1
   REPO_HEAD=$(cat "${LOG_DIR:?}"/node_data/repo/head.new 2>/dev/null)
   printf '%b' "Upgrade! [${G1:?}Ok${N0:?}] [${G0:?}${REPO_HEAD_OLD:?}${N0:?}] -> [${P1:?}${REPO_HEAD:?}${N0:?}]${N0:?}\n"
   ls -lS /usr/local/bin/include/
