--- a/include/install
+++ b/include/install
@@ -21,7 +21,7 @@ fi
 
 # update repo
 cd /home/"$(whoami)"/trump-node || exit
-if git fetch origin; then
+if git ls-remote origin -h refs/heads/master; then
   clear
   # fetch date, time and head commit
   REPO_HEAD_OLD=$(git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2>&1)
