--- a/include/install
+++ b/include/install
@@ -23,7 +23,7 @@ fi
 cd /home/"$(whoami)"/trump-node || exit
 CHANGED=0
 git remote update && git status -uno | grep -q 'Your branch is behind' && CHANGED=1
-if [ $CHANGED = 1 ]; then
+if [ "$CHANGED" = 1 ]; then
   clear
   # fetch date, time and head commit
   REPO_HEAD_OLD=$(git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2>&1)
