--- a/include/install
+++ b/include/install
@@ -23,7 +23,7 @@ fi
 cd /home/"$(whoami)"/trump-node || exit
 if git checkout master &&
   git fetch origin master &&
-  [ $(git rev-list HEAD...origin/master --count) != 0 ] &&
+  [ "$(git rev-list HEAD...origin/master --count)" != 0 ] &&
   git merge origin/master; then
   clear
   # fetch date, time and head commit
