--- a/include/install
+++ b/include/install
@@ -2,7 +2,7 @@
 
 # By Rainman
 # V20212312
-# 0.0.6.3
+# 0.0.6.3a
 
 source /home/pi/pitrump.conf
 source /usr/local/bin/include/color
@@ -40,7 +40,7 @@ if git diff remotes/origin/HEAD; then
   # update repo
   cd /home/"$(whoami)"/trump-node || exit
   # fetch date, time and head commit
-  REPO_HEAD=$(git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 >"${LOG_DIR:?}"/node_data/repo/head.new 2>&1)
+  REPO_HEAD=$(git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2>&1)
   printf '%b' "Upgrade! [${G1:?}Ok${N0:?}] [${G0:?}${REPO_HEAD_OLD:?}${N0:?}] -> [${P1:?}${REPO_HEAD:?}${N0:?}]${N0:?}\n"
   ls -lS /usr/local/bin/include/
 else
