--- a/include/install
+++ b/include/install
@@ -2,7 +2,7 @@
 
 # By Rainman
 # V20212312
-# 0.0.5.5
+# 0.0.5.8
 
 source /home/pi/pitrump.conf
 source /usr/local/bin/include/color
@@ -25,22 +25,25 @@ REPO_HEAD_OLD=$(git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | h
 # save values, make it old next round
 echo "$REPO_HEAD_OLD" >"${LOG_DIR:?}"/node_data/repo/head.old 2>&1
 
-# install/update
-mkdir "${LOG_DIR:?}"/node_data &>/dev/null
-mkdir "${LOG_DIR:?}"/node_data/repo &>/dev/null
-sudo cp -R /home/"$(whoami)"/trump-node/include/* /usr/local/bin/include/ 2>&1
-sudo cp -R /home/"$(whoami)"/trump-node/pitrump /usr/local/bin/ 2>&1
-sudo cp -R /home/"$(whoami)"/trump-node/include/install /usr/local/bin/update 2>&1
-sudo chmod +x /usr/local/bin/update
-sudo chown -R "$(whoami)":"$(whoami)" /usr/local/bin/pitrump /usr/local/bin/update /usr/local/bin/include /usr/local/bin/include/* 2>&1
-sudo chown "$(whoami)":"$(whoami)" "${LOG_DIR:?}"/node_data 2>&1
+function install_update() {
+  # install/update
+  mkdir "${LOG_DIR:?}"/node_data &>/dev/null
+  mkdir "${LOG_DIR:?}"/node_data/repo &>/dev/null
+  sudo cp -R /home/"$(whoami)"/trump-node/include/* /usr/local/bin/include/ 2>&1
+  sudo cp -R /home/"$(whoami)"/trump-node/pitrump /usr/local/bin/ 2>&1
+  sudo cp -R /home/"$(whoami)"/trump-node/include/install /usr/local/bin/update 2>&1
+  sudo chmod +x /usr/local/bin/update
+  sudo chown -R "$(whoami)":"$(whoami)" /usr/local/bin/pitrump /usr/local/bin/update /usr/local/bin/include /usr/local/bin/include/* 2>&1
+  sudo chown "$(whoami)":"$(whoami)" "${LOG_DIR:?}"/node_data 2>&1
+}
+install_update
 
 # update repo
 cd /home/"$(whoami)"/trump-node || exit
 if git diff --quiet remotes/origin/HEAD; then
   clear
   # update repo
-  cd /home/"$(whoami)"/trump-node || exit && git pull -q && bash include/install 2>&1
+  cd /home/"$(whoami)"/trump-node || exit && git pull -q && install_update 2>&1
   # fetch date, time and head commit
   REPO_HEAD=$(git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2>&1)
   REPO_DATE=$(git log -1 --format="%at" | xargs -I{} date -d @{} '+%Y/%m/%d')
