--- a/include/install
+++ b/include/install
@@ -2,7 +2,7 @@
 
 # By Rainman
 # V20212312
-# 0.0.5.9
+# 0.0.6.0
 
 source /home/pi/pitrump.conf
 source /usr/local/bin/include/color
@@ -52,6 +52,7 @@ if git diff --quiet remotes/origin/HEAD &>/dev/null; then
   if ! tail -10 "${WALLET_LOG_DIR:?}"/debug.log 2>&1 | grep "UpdatingRepo()" &>/dev/null; then
     printf '%b' "${LOG_DATE:?} Status() UpdatingRepo() [${G1:?}Ok${N0:?}] [${G1:?}${REPO_HEAD:?}${N0:?}] ${GR:?}${REPO_DATE:?}${N0:?} ${REPO_TIME:?}\n" >>"${WALLET_LOG_DIR:?}"/debug.log 2>&1
   fi
+  REPO_HEAD_OLD=$(cat "${LOG_DIR:?}"/node_data/repo/head.old 2>/dev/null)
   printf '%b' "Upgraded! [${G1:?}Ok${N0:?}] [${G0:?}${REPO_HEAD_OLD:?}${N0:?}] -> [${P1:?}${REPO_HEAD:?}${N0:?}]${N0:?}\n"
   ls -lS /usr/local/bin/include/
 fi
