--- a/include/install
+++ b/include/install
@@ -2,7 +2,7 @@
 
 # By Rainman
 # V20212312
-# 0.0.6.4
+# 0.0.5.7
 
 source /home/pi/pitrump.conf
 source /usr/local/bin/include/color
@@ -26,35 +26,28 @@ cd /home/"$(whoami)"/trump-node || exit
 echo "$(git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2>&1)" >"${LOG_DIR:?}"/node_data/repo/head.old 2>&1
 REPO_HEAD_OLD=$(cat "${LOG_DIR:?}"/node_data/repo/head.old 2>/dev/null)
 
-function install_update() {
-  # install/update
-  mkdir "${LOG_DIR:?}"/node_data &>/dev/null
-  mkdir "${LOG_DIR:?}"/node_data/repo &>/dev/null
-  sudo cp -R /home/"$(whoami)"/trump-node/include/* /usr/local/bin/include/ 2>&1
-  sudo cp -R /home/"$(whoami)"/trump-node/pitrump /usr/local/bin/ 2>&1
-  sudo cp -R /home/"$(whoami)"/trump-node/include/install /usr/local/bin/update 2>&1
-  sudo chmod +x /usr/local/bin/update
-  sudo chown -R "$(whoami)":"$(whoami)" /usr/local/bin/pitrump /usr/local/bin/update /usr/local/bin/include /usr/local/bin/include/* 2>&1
-  sudo chown "$(whoami)":"$(whoami)" "${LOG_DIR:?}"/node_data 2>&1
-}
-install_update
+# create directories
+mkdir "${LOG_DIR:?}"/node_data &>/dev/null
+mkdir "${LOG_DIR:?}"/node_data/repo &>/dev/null
 
 # update repo
 cd /home/"$(whoami)"/trump-node || exit
 if git diff --quiet remotes/origin/HEAD &>/dev/null; then
   clear
   # update repo
-  cd /home/"$(whoami)"/trump-node || exit && git pull -q && install_update 2>&1
+  cd /home/"$(whoami)"/trump-node || exit && git pull -q
+  sudo cp -R /home/"$(whoami)"/trump-node/include/* /usr/local/bin/include/ 2>&1
+  sudo cp -R /home/"$(whoami)"/trump-node/pitrump /usr/local/bin/ 2>&1
+  sudo cp -R /home/"$(whoami)"/trump-node/include/install /usr/local/bin/update 2>&1
+  sudo chmod +x /usr/local/bin/update
+  sudo chown -R "$(whoami)":"$(whoami)" /usr/local/bin/pitrump /usr/local/bin/update /usr/local/bin/include /usr/local/bin/include/* 2>&1
+  sudo chown "$(whoami)":"$(whoami)" "${LOG_DIR:?}"/node_data 2>&1
   # fetch date, time and head commit
   REPO_HEAD=$(git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2>&1)
   REPO_DATE=$(git log -1 --format="%at" | xargs -I{} date -d @{} '+%Y/%m/%d')
   REPO_TIME=$(git log -1 --format="%at" | xargs -I{} date -d @{} '+%H:%M:%S')
   if ! tail -10 "${WALLET_LOG_DIR:?}"/debug.log 2>&1 | grep "UpdatingRepo()" &>/dev/null; then
     printf '%b' "${LOG_DATE:?} Status() UpdatingRepo() [${G1:?}Ok${N0:?}] [${G1:?}${REPO_HEAD:?}${N0:?}] ${GR:?}${REPO_DATE:?}${N0:?} ${REPO_TIME:?}\n" >>"${WALLET_LOG_DIR:?}"/debug.log 2>&1
-  fi
-  if [[ "$REPO_HEAD" -eq "$REPO_HEAD_OLD" ]]; then
-    REPO_HEAD="${G1:?}Latest${N0:?}"
-    REPO_HEAD_OLD="${G1:?}Latest${N0:?}"
   fi
   REPO_HEAD_OLD=$(cat "${LOG_DIR:?}"/node_data/repo/head.old 2>/dev/null)
   printf '%b' "Upgraded! [${G1:?}Ok${N0:?}] [${G0:?}${REPO_HEAD_OLD:?}${N0:?}] -> [${P1:?}${REPO_HEAD:?}${N0:?}]${N0:?}\n"
