--- a/include/install
+++ b/include/install
@@ -2,7 +2,7 @@
 
 # By Rainman
 # V20212312
-# 0.0.5.7
+# 0.0.5.8
 
 source /home/pi/pitrump.conf
 source /usr/local/bin/include/color
@@ -24,7 +24,6 @@ fi
 # save values, make it old next round
 cd /home/"$(whoami)"/trump-node || exit
 echo "$(git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2>&1)" >"${LOG_DIR:?}"/node_data/repo/head.old 2>&1
-REPO_HEAD_OLD=$(cat "${LOG_DIR:?}"/node_data/repo/head.old 2>/dev/null)
 
 # create directories
 mkdir "${LOG_DIR:?}"/node_data &>/dev/null
@@ -52,6 +51,8 @@ if git diff --quiet remotes/origin/HEAD &>/dev/null; then
   REPO_HEAD_OLD=$(cat "${LOG_DIR:?}"/node_data/repo/head.old 2>/dev/null)
   printf '%b' "Upgraded! [${G1:?}Ok${N0:?}] [${G0:?}${REPO_HEAD_OLD:?}${N0:?}] -> [${P1:?}${REPO_HEAD:?}${N0:?}]${N0:?}\n"
   ls -lS /usr/local/bin/include/
+  # new old
+  echo "$REPO_HEAD" >"${LOG_DIR:?}"/node_data/repo/head.old 2>&1
 fi
 
 # END
