--- a/include/install
+++ b/include/install
@@ -2,7 +2,7 @@
 
 # By Rainman
 # V20212312
-# 0.0.5.6
+# 0.0.6.2
 
 source /home/pi/pitrump.conf
 source /usr/local/bin/include/color
@@ -29,7 +29,12 @@ echo "$(git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2
 mkdir "${LOG_DIR:?}"/node_data &>/dev/null
 mkdir "${LOG_DIR:?}"/node_data/repo &>/dev/null
 
-if ! grep "$(git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2>&1)" "${WALLET_LOG_DIR:?}"/debug.log &>/dev/null; then
+BRANCH="<your branch name>"
+LAST_UPDATE=$(git show --no-notes --format=format:"%H" $BRANCH | head -n 1)
+LAST_COMMIT=$(git show --no-notes --format=format:"%H" origin/$BRANCH | head -n 1)
+
+git remote update
+if [ $LAST_COMMIT != $LAST_UPDATE ]; then
   clear
   # update repo
   cd /home/"$(whoami)"/trump-node || exit && git pull -q
@@ -40,17 +45,18 @@ if ! grep "$(git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head
   sudo chown -R "$(whoami)":"$(whoami)" /usr/local/bin/pitrump /usr/local/bin/update /usr/local/bin/include /usr/local/bin/include/* 2>&1
   sudo chown "$(whoami)":"$(whoami)" "${LOG_DIR:?}"/node_data 2>&1
   # fetch date, time and head commit
-  REPO_HEAD=$(git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2>&1)
   REPO_DATE=$(git log -1 --format="%at" | xargs -I{} date -d @{} '+%Y/%m/%d')
   REPO_TIME=$(git log -1 --format="%at" | xargs -I{} date -d @{} '+%H:%M:%S')
   if ! tail -10 "${WALLET_LOG_DIR:?}"/debug.log 2>&1 | grep "UpdatingRepo()" &>/dev/null; then
-    printf '%b' "${LOG_DATE:?} Status() UpdatingRepo() [${G1:?}Ok${N0:?}] [${G1:?}${REPO_HEAD:?}${N0:?}] ${GR:?}${REPO_DATE:?}${N0:?} ${REPO_TIME:?}\n" >>"${WALLET_LOG_DIR:?}"/debug.log 2>&1
+    printf '%b' "${LOG_DATE:?} Status() UpdatingRepo() [${G1:?}Ok${N0:?}] [${G1:?}${LAST_COMMIT:?}${N0:?}] ${GR:?}${REPO_DATE:?}${N0:?} ${REPO_TIME:?}\n" >>"${WALLET_LOG_DIR:?}"/debug.log 2>&1
   fi
   REPO_HEAD_OLD=$(cat "${LOG_DIR:?}"/node_data/repo/head.old 2>/dev/null)
-  printf '%b' "Upgraded! [${G1:?}Ok${N0:?}] [${G0:?}${REPO_HEAD_OLD:?}${N0:?}] -> [${P1:?}${REPO_HEAD:?}${N0:?}]${N0:?}\n"
+  printf '%b' "Upgraded! [${G1:?}Ok${N0:?}] [${G0:?}${REPO_HEAD_OLD:?}${N0:?}] -> [${P1:?}${LAST_COMMIT:?}${N0:?}]${N0:?}\n"
   ls -lS /usr/local/bin/include/
   # new old
   echo "$REPO_HEAD" >"${LOG_DIR:?}"/node_data/repo/head.old 2>&1
+else
+  echo "No updates available"
 fi
 
 # END
