--- a/include/install
+++ b/include/install
@@ -2,7 +2,7 @@
 
 # By Rainman
 # V20212312
-# 0.0.6.2
+# 0.0.6.3
 
 source /home/pi/pitrump.conf
 source /usr/local/bin/include/color
@@ -33,6 +33,7 @@ BRANCH="<your branch name>"
 LAST_UPDATE=$(git show --no-notes --format=format:"%H" $BRANCH | head -n 1)
 LAST_COMMIT=$(git show --no-notes --format=format:"%H" origin/$BRANCH | head -n 1)
 
+cd /home/"$(whoami)"/trump-node || exit
 git remote update
 if [ $LAST_COMMIT != $LAST_UPDATE ]; then
   clear
