--- a/include/install
+++ b/include/install
@@ -2,7 +2,7 @@
 
 # By Rainman
 # V20213012
-# 0.0.3.5
+# 0.0.3.9
 
 source /home/pi/pitrump.conf
 
@@ -18,9 +18,13 @@ if ! [ -x "$(command -v tor)" ] &>/dev/null; then
   echo "Setup tor/wallet configurations!"
 fi
 
-# install/update
 clear
-killall screen &>/dev/null
+# look for screen session, if found, killall
+if screen -list 2>&1 |
+  grep -q "add_peers" &>/dev/null; then
+  killall screen &>/dev/null
+fi
+# install/update
 mkdir "${LOG_DIR:?}"/node_data &>/dev/null
 sudo mkdir /usr/local/bin/include &>/dev/null
 sudo cp -R /home/"$(whoami)"/trump-node/include/* /usr/local/bin/include/ 2>&1
