--- a/include/install
+++ b/include/install
@@ -1,8 +1,8 @@
 #!/bin/bash
 
 # By Rainman
-# V20213012
-# 0.0.4.1
+# V20220101
+# 0.0.4.5
 
 source /home/pi/pitrump.conf
 
@@ -19,23 +19,27 @@ if ! [ -x "$(command -v tor)" ] &>/dev/null; then
 fi
 
 clear
+
 # look for screen session, if found, killall
 if screen -list 2>&1 |
   grep -q "add_peers" &>/dev/null; then
   killall screen &>/dev/null
 fi
+
 # install/update
 mkdir "${LOG_DIR:?}"/node_data &>/dev/null
 sudo mkdir /usr/local/bin/include &>/dev/null
 sudo cp -R /home/"$(whoami)"/trump-node/include/* /usr/local/bin/include/ 2>&1
 sudo cp -R /home/"$(whoami)"/trump-node/pitrump /usr/local/bin/ 2>&1
 sudo cp -R /home/"$(whoami)"/trump-node/include/update /usr/local/bin/ 2>&1
-sudo chmod +x /usr/local/bin/update
+sudo cp -R /home/"$(whoami)"/trump-node/include/menu /usr/local/bin/ 2>&1
+sudo chmod +x /usr/local/bin/update 2>&1
+sudo chmod +x /usr/local/bin/menu 2>&1
 sudo chown -R "$(whoami)":"$(whoami)" /usr/local/bin/pitrump /usr/local/bin/update /usr/local/bin/include /usr/local/bin/include/* 2>&1
 sudo chown "$(whoami)":"$(whoami)" "${LOG_DIR:?}"/node_data 2>&1
 LATEST_DATE=$(cd /home/"$(whoami)"/trump-node || exit && git log -1 --format="%at" | xargs -I{} date -d @{} '+%Y/%m/%d %H:%M:%S')
 LATEST_HEAD=$(cd /home/"$(whoami)"/trump-node || exit && git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2>&1)
 echo "Updated! [$LATEST_HEAD] $LATEST_DATE"
-ls -lS /usr/local/bin/include/
+ls -lSh /usr/local/bin/include/
 
 # END
