--- a/include/install
+++ b/include/install
@@ -1,8 +1,8 @@
 #!/bin/bash
 
 # By Rainman
-# V20220201
-# 0.0.4.6
+# V20220301
+# 0.0.5.1
 
 source /home/pi/pitrump.conf
 
@@ -15,6 +15,11 @@ fi
 # make sure tor is installed
 if ! [ -x "$(command -v tor)" ] &>/dev/null; then
   sudo apt-get install tor -y
+  echo "Setup tor/wallet configurations!"
+fi
+# make sure grepcidr is installed
+if ! [ -x "$(command -v grepcidr)" ] &>/dev/null; then
+  sudo apt-get install grepcidr -y
   echo "Setup tor/wallet configurations!"
 fi
 
