--- a/include/install
+++ b/include/install
@@ -1,10 +1,11 @@
 #!/bin/bash
 
 # By Rainman
-# V20220301
-# 0.0.5.1
+# V20220401
+# 0.0.5.7
 
 source /home/pi/pitrump.conf
+source /usr/local/bin/include/color
 
 # dependencies
 
@@ -32,8 +33,12 @@ if screen -list 2>&1 |
 fi
 
 # install/update
-mkdir "${LOG_DIR:?}"/node_data &>/dev/null
-sudo mkdir /usr/local/bin/include &>/dev/null
+if [ ! -d "${LOG_DIR:?}"/node_data ] &>/dev/null; then
+  mkdir "${LOG_DIR:?}"/node_data &>/dev/null
+fi
+if [ ! -d /usr/local/bin/include ] &>/dev/null; then
+  sudo mkdir /usr/local/bin/include &>/dev/null
+fi
 sudo cp -R /home/"$(whoami)"/trump-node/include/* /usr/local/bin/include/ 2>&1
 sudo cp -R /home/"$(whoami)"/trump-node/pitrump /usr/local/bin/ 2>&1
 sudo cp -R /home/"$(whoami)"/trump-node/include/update /usr/local/bin/ 2>&1
@@ -45,7 +50,8 @@ sudo chown -R "$(whoami)":"$(whoami)" /usr/local/bin/pitrump /usr/local/bin/upda
 sudo chown "$(whoami)":"$(whoami)" "${LOG_DIR:?}"/node_data 2>&1
 LATEST_DATE=$(cd /home/"$(whoami)"/trump-node || exit && git log -1 --format="%at" | xargs -I{} date -d @{} '+%Y/%m/%d %H:%M:%S')
 LATEST_HEAD=$(cd /home/"$(whoami)"/trump-node || exit && git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2>&1)
-echo "Updated! [$LATEST_HEAD] $LATEST_DATE"
+echo "Updated! [${G1:?}$LATEST_HEAD${N0:?}] ${GR:?}$LATEST_DATE${N0:?}"
+printf '%b' "${LOG_DATE:?} Status() Update.Script: Updating --> [${G1:?}$LATEST_HEAD${N0:?}] ${GR:?}$LATEST_DATE${N0:?}\n" >>"${WALLET_LOG_DIR:?}"/debug.log 2>&1
 ls -lSh /usr/local/bin/include/
 
 # END
