--- a/include/install
+++ b/include/install
@@ -2,10 +2,13 @@
 
 # By Rainman
 # V20220401
-# 0.0.5.7
+# 0.0.6.0
 
 source /home/pi/pitrump.conf
 source /usr/local/bin/include/color
+
+# date for logs
+LOG_DATE=$(date '+%Y-%m-%dT%TZ' 2>&1)
 
 # dependencies
 
