--- a/include/install
+++ b/include/install
@@ -54,7 +54,7 @@ sudo chown -R "$(whoami)":"$(whoami)" "${LOG_DIR:?}"/node_data 2>&1
 LATEST_DATE=$(cd /home/"$(whoami)"/trump-node || exit && git log -1 --format="%at" | xargs -I{} date -d @{} '+%Y/%m/%d %H:%M:%S')
 LATEST_HEAD=$(cd /home/"$(whoami)"/trump-node || exit && git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2>&1)
 OLD_HEAD=$(grep "Update.Script" "${WALLET_LOG_DIR:?}"/debug.log 2>&1 | awk '{ print $7 }' 2>&1 | tail -1 2>&1 | sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" 2>&1)
-if [[ "$LATEST_HEAD" -eq "$LATEST_HEAD" ]]; then
+if [[ "$(echo "${LATEST_HEAD:?}" 2>&1 | egrep -o "[0-9]+" 2>&1 | xargs 2>&1 | tr -d ' ' 2>&1)" -eq "$(echo "${LATEST_HEAD:?}" 2>&1 | egrep -o "[0-9]+" 2>&1 | xargs 2>&1 | tr -d ' ' 2>&1)" ]] &>/dev/null; then
   ON="${G1:?}"
 else
   ON="${GR:?}"
