--- a/include/install
+++ b/include/install
@@ -22,7 +22,7 @@ if ! [ -x "$(command -v tor)" ] &>/dev/null; then
   echo "Setup tor/wallet configurations!"
   # some configuration
   TORGROUP=$(stat -c '%G' /run/tor/control.authcookie 2>&1)
-  usermod -a -G "${TORGROUP:?}" "$(whoami)" 2>&1
+  sudo usermod -a -G "${TORGROUP:?}" "$(whoami)" 2>&1
 fi
 # make sure grepcidr is installed
 if ! [ -x "$(command -v grepcidr)" ] &>/dev/null; then
