--- a/include/install
+++ b/include/install
@@ -2,7 +2,7 @@
 
 # By Rainman
 # V20220401
-# 0.0.6.8
+# 0.0.8.2
 
 source /home/pi/pitrump.conf
 source /usr/local/bin/include/color
@@ -16,14 +16,28 @@ LOG_DATE=$(date '+%Y-%m-%dT%TZ' 2>&1)
 if ! [ -x "$(command -v screen)" ] &>/dev/null; then
   sudo apt-get install screen -y
 fi
+
 # make sure tor is installed
 if ! [ -x "$(command -v tor)" ] &>/dev/null; then
   sudo apt-get install tor -y
   echo "Setup tor/wallet configurations!"
-  # some configuration
+  # tor group, user configuration
   TORGROUP=$(stat -c '%G' /run/tor/control.authcookie 2>&1)
   sudo usermod -a -G "${TORGROUP:?}" "$(whoami)" 2>&1
+  # check torrc configuration
+  if ! grep "15110 127.0.0.1:15110" /etc/tor/torrc &>/dev/null; then
+    echo "
+ControlPort 9051
+CookieAuthentication 1
+CookieAuthFileGroupReadable 1
+
+HiddenServiceDir /var/lib/tor/trumpcoin-service/
+HiddenServicePort 15110 127.0.0.1:15110"
+    # restart tor after configuration
+    sudo service tor restart 2>&1
+  fi
 fi
+
 # make sure grepcidr is installed
 if ! [ -x "$(command -v grepcidr)" ] &>/dev/null; then
   sudo apt-get install grepcidr -y
