--- a/include/install
+++ b/include/install
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # By Rainman
-# V20220401
+# V20220501
 # 0.0.8.7
 
 source /home/pi/pitrump.conf
@@ -33,7 +33,7 @@ CookieAuthentication 1
 CookieAuthFileGroupReadable 1
 
 HiddenServiceDir /var/lib/tor/trumpcoin-service/
-HiddenServicePort 15110 127.0.0.1:15110"
+HiddenServicePort 15110 127.0.0.1:15110
 EOF
     cat /tmp/torrc 2>/dev/null | sudo tee -a /etc/tor/torrc 2>&1
     # remove old files
