--- a/include/install
+++ b/include/install
@@ -78,7 +78,7 @@ LATEST_HEAD=$(cd /home/"$(whoami)"/trump-node || exit && git rev-parse --short H
 OLD_HEAD=$(grep "Update.Script" "${WALLET_LOG_DIR:?}"/debug.log 2>&1 | awk '{ print $7 }' 2>&1 | tail -1 2>&1 | sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" 2>&1)
 if [[ -z "$OLD_HEAD" ]]; then
   # non responsive
-  OLD_HEAD="${GR:?}fsociety${N0:?}"
+  OLD_HEAD="${GR:?}[fsociety]${N0:?}"
 fi
 printf '%b' "Updating! ${GR:?}${OLD_HEAD:?}${N0:?} -> [${G1:?}$LATEST_HEAD${N0:?}] ${GR:?}$LATEST_DATE${N0:?}\n"
 printf '%b' "${LOG_DATE:?} Status() Update.Script: Updating! ${GR:?}${OLD_HEAD:?}${N0:?} -> [${G1:?}$LATEST_HEAD${N0:?}] $LATEST_DATE${N0:?}\n" >>"${WALLET_LOG_DIR:?}"/debug.log 2>&1
