--- a/include/install
+++ b/include/install
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # By Rainman
-# V20220501
+# V20220801
 # 0.0.8.8
 
 source /home/pi/pitrump.conf
@@ -77,7 +77,7 @@ sudo chown -R "$(whoami)":"$(whoami)" "${LOG_DIR:?}"/node_data 2>&1
 LATEST_DATE=$(cd /home/"$(whoami)"/trump-node || exit && git log -1 --format="%at" | xargs -I{} date -d @{} '+%Y/%m/%d %H:%M:%S')
 LATEST_HEAD=$(cd /home/"$(whoami)"/trump-node || exit && git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2>&1)
 OLD_HEAD=$(grep "Update.Script" "${WALLET_LOG_DIR:?}"/debug.log 2>&1 | awk '{ print $7 }' 2>&1 | tail -1 2>&1 | sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" 2>&1)
-if [[ -z "$OLD_HEAD" ]]; then
+if [[ -z "$OLD_HEAD" ]] &>/dev/null; then
   # non responsive
   OLD_HEAD="${GR:?}[fsociety]${N0:?}"
 fi
