--- a/include/install
+++ b/include/install
@@ -1,8 +1,8 @@
 #!/bin/bash
 
 # By Rainman
-# V20220801
-# 0.0.9.2
+# V20222101
+# 0.1.1.4
 
 source /home/pi/pitrump.conf
 source /usr/local/bin/include/color
@@ -14,6 +14,7 @@ LOG_DATE=$(date '+%Y-%m-%dT%TZ' 2>&1)
 
 # make sure screen is installed
 if ! [ -x "$(command -v screen)" ] &>/dev/null; then
+  echo "Installing screen"
   sudo apt-get install screen -y
 fi
 
@@ -22,6 +23,7 @@ if ! [ -x "$(command -v tor)" ] &>/dev/null; then
   read -r -p "[YN] Install Proxy (tor)? y/n " -n 1 -r
   echo
   if [[ $REPLY =~ ^[Yy]$ ]] &>/dev/null; then
+    echo "Installing tor (proxy)"
     sudo apt-get install tor -y
     echo "Setup tor/wallet configurations!"
     # tor group, user configuration
@@ -50,8 +52,28 @@ fi
 
 # make sure grepcidr is installed
 if ! [ -x "$(command -v grepcidr)" ] &>/dev/null; then
+  echo "Installing grepcidr"
   sudo apt-get install grepcidr -y
   echo "Setup tor/wallet configurations!"
+  echo
+  read -r -p "[Ok] Press Enter to continue" </dev/tty
+  echo
+fi
+
+# make sure uncomplicated firewall (ufw) is installed
+if ! [ -x "$(command -v ufw)" ] &>/dev/null; then
+  echo "Installing uncomplicated firewall (ufw)"
+  # setup ufw with node ports 15110, 80, 22
+  sudo apt-get install ufw -y
+  sudo ufw allow 15110 comment "TrumpCoin mainnet"
+  sudo ufw allow 80 comment "TrumpCoin Graphs"
+  sudo ufw allow 22 comment "SSH"
+  sudo ufw status
+  echo "Using different ports?"
+  echo "sudo ufw status & sudo ufw --help"
+  echo
+  read -r -p "[Ok] Press Enter to continue" </dev/tty
+  echo
 fi
 
 clear
