--- a/include/install
+++ b/include/install
@@ -2,7 +2,7 @@
 
 # By Rainman
 # V20222101
-# 0.1.7.2
+# 0.1.7.4
 
 source /home/pi/pitrump.conf
 source /usr/local/bin/include/color
@@ -38,7 +38,9 @@ CookieAuthentication 1
 CookieAuthFileGroupReadable 1
 
 HiddenServiceDir /var/lib/tor/trumpcoin-service/
-HiddenServicePort 15110 127.0.0.1:15110" >/tmp/torrc 2>&1
+HiddenServicePort 15110 127.0.0.1:15110
+HiddenServicePort 80 127.0.0.1:80
+" >/tmp/torrc 2>&1
       cat /tmp/torrc 2>/dev/null | sudo tee -a /etc/tor/torrc 2>&1
       # remove old files
       rm /tmp/torrc &>/dev/null
