--- a/include/install
+++ b/include/install
@@ -2,14 +2,13 @@
 
 # By Rainman
 # V20222201
-# 0.1.7.5
+# 0.1.7.4
 
-if [[ -f /usr/local/bin/include/pitrump.conf ]] &>/dev/null; then
-  source /usr/local/bin/include/pitrump.conf
-else
+if [[ ! -f /usr/local/bin/include/pitrump.conf ]] &>/dev/null; then
   sudo cp /home/"$(whoami)"/trump-node/pitrump.conf /usr/local/bin/include/pitrump.conf 2>/dev/null
-  source /usr/local/bin/include/pitrump.conf
+  sudo cp /home/"$(whoami)"/pitrump.conf /usr/local/bin/include/pitrump.conf 2>/dev/null
 fi
+source /usr/local/bin/include/pitrump.conf
 source /usr/local/bin/include/color
 
 # date for logs
